syntax = "proto3";

message RoomCreatedData {
    string room_id = 1;
}
