syntax = "proto3";

message PurchaseShopBotData {
    string id = 1;
}
